# hydrodatasource

./: .gitignore  404.html  README.md  README.zh.md  definitions.py  env-dev.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  summary_log.txt  test_streamflow_cleaner.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  docs.yml  macos.yml  pypi.yml  ubuntu.yml  windows.yml
api/: index.html
cleaner/: index.html
configs/: index.html
data/river_network/: songliao_cut_single.shx
docs/: catalog.md  changelog.md  common.md  contributing.md  downloader.md  hydrodatasource.md  hydroprivatedata.md  index.md  installation.md  reader.md  station_dataset_guide.md  usage.md
docs/api/: catalog_minio.md  dem.md  downloader.md  reader_minio.md
docs/modules/: catalog.ipynb  downloader.ipynb  minio.ipynb  reader.ipynb
hydrodata/: __init__.py  config.py  model_stream.py  preprocess.py  reader.py  source_data_dict.py
hydrodata/autoflows/: example_testflow.py
hydrodata/cleaner/: rain_flow_division.py  smooth_inq.py
hydrodata/configs/: common.py  config.py
hydrodata/downloader/: downloader.py  hydrostation.py  minio.py
hydrodata/processor/: check_tidy_data.py  data_all.py  data_checker.py  era5.py  gfs.py  gpm.py  gpm_gfs.py  make_attributes.py  make_gfs_forcing.py  mask.py  merge.py  minio.py  minio_process.py  preprocess.py  preprocess_grdc.py  test_era5.py
hydrodata/reader/: access_fs.py  data_source.py  era5.py  gfs.py  gpm.py  grdc.py  minio.py  reader.py  stations.py
hydrodata/utils/: utils.py
hydrodatasource/: __init__.py
hydrodatasource/autoflows/: example_testflow.py
hydrodatasource/cleaner/: basin_mean_rainfall.py  cleaner.py  rain_anomaly.py  rainfall_clean.py  rainfall_cleaner.py  rsvr_inflow_cleaner.py  streamflow_cleaner.py  waterlevel_cleaner.py
hydrodatasource/configs/: config.py
hydrodatasource/downloader/: __init__.py  downloader.py  hydrostation.py  iowa_stations_download.py
hydrodatasource/foreign_models/: graphcast.py
hydrodatasource/processor/: basin_mean_rainfall.py  era5.py  gpm_gfs.py  grdc.py  mask.py
hydrodatasource/reader/: access_fs.py  data_source.py  era5.py  floodevent.py  gages.py  gfs.py  gpm.py  grdc.py  metadata.py  minio.py  mswep.py  postgres.py  rainfall_reader.py  reservoir_datasets.py  rsvr_inflow_reader.py  spliter_grid.py
hydrodatasource/runtime/: README.md  __init__.py  cache_manager.py  runtime_data_loader.py
hydrodatasource/runtime/data_adapters/: __init__.py  csv_adapter.py  json_adapter.py  parquet_adapter.py  xarray_adapter.py
hydrodatasource/utils/: fixdata.py  utils.py
hydroprivatedata/: Streamflow_Smoothing.ipynb  Streamflow_Smoothing_result.ipynb  __init__.py  config.py  fixdata.py  get_moving_inq.py  minio_api.py  model_stream.py  preprocess.py  reader.py  source_data_dict.py
hydroprivatedata/processor/: preprocess_grdc.py
notebooks/: Streamflow_Smoothing_result.ipynb
processor/: index.html
reader/: index.html
scripts/: china_rainfall_preprocessing.py  china_rainfall_reading.py  chinese_rsvr_inflow_preprocessing.py  chinese_streamflow_preprocessing.py  const4scripts.py  rainfall_runoff_events.py  runtime_data_loading_examples.py  station_dataset_usage.py
search/: search_index.json
tests/: __init__.py  conftest.py  iowa_fields_table.yml  metadata.csv  smap_lat.npy  smap_lon.npy  test_463_sl_nodes.py  test_access_fs.py  test_aoi_reading.py  test_basin_mean_rainfall.py  test_blh_2009_2022.py  test_check_iowa_datasets.py  test_concat_dems.py  test_data_checker.py  test_data_source.py  test_dmca_esr.py  test_download_iowa.py  test_downloader.py  test_flood_event_datasource.py  test_gages.py  test_gpm_gfs.py  test_graphcast.py  test_grdc.py  test_grid_mean.py  test_hydroprivatedata.py  test_merge_era5_daily.py  test_metadata.py  test_preprocess.py  test_process_flowdb.py  test_process_inq.py  test_processor.py  test_rain_flow_division.py  test_rainfall_average.py  test_rainfall_cleaner.py  test_rainfall_reader.py  test_read_blob.py  test_read_gfs_csv.py  test_read_gpm_csv.py  test_read_postgres.py  test_reader.py  (+15 more)
(+6 files in other folders)
