[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrodatasource"
version = "0.1.1"
description = "A python project to deal with hydrological datasources"
authors = [{name = "Wenyu Ouyang", email = "hust2014owen@gmail.com"}]
license = {text = "BSD License"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["hydrodatasource", "hydrology", "data", "water", "geospatial"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "geopandas",
    "openpyxl",
    "xlrd",
    "requests",
    "scipy",
    "pywavelets",
    "psycopg2-binary",
    "sqlalchemy",
    "loguru",
    "kerchunk",
    "cfgrib",
    "eccodes",
    "h5py",
    "chardet",
    "intake",
    "polars",
    "wget",
    "dataretrieval",
    "pygeohydro",
    "pykalman",
    "hydroutils>=0.1.0",
    "hydrodataset>=0.2.0",
    "hydrotopo",
    "aqua-fetch[all]",
]

[project.optional-dependencies]
dev = [
    # Code formatting and linting
    "black",
    "black[jupyter]",
    "flake8",
    
    # Testing
    "pytest",
    "pytest-runner",
    "pytest-asyncio",
    "pytest-mock",
    
    # Packaging and version management
    "bump2version",
    "wheel",
    "twine",
    
    # Development tools
    "watchdog",
    "tox",
    "coverage",
]

docs = [
    # Sphinx documentation
    "Sphinx",
    
    # MkDocs documentation
    "mkdocs",
    "mkdocs-git-revision-date-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-material>=9.1.3",
    "mkdocs-pdf-export-plugin",
    "mkdocstrings",
    "mkdocstrings-crystal",
    "mkdocstrings-python-legacy",
    
    # Jupyter notebook support
    "ipykernel",
    "nbconvert",
    "nbformat",
    
    # Additional tools
    "livereload",
    "pygments",
    "pymdown-extensions",
]

[project.urls]
Homepage = "https://github.com/iHeadWater/hydrodatasource"
Repository = "https://github.com/iHeadWater/hydrodatasource"
Documentation = "https://github.com/iHeadWater/hydrodatasource"
"Bug Tracker" = "https://github.com/iHeadWater/hydrodatasource/issues"

[tool.setuptools.packages.find]
include = ["hydrodatasource*"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.json", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
collect_ignore = ["setup.py"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox",
]

[tool.bumpversion]
current_version = "0.1.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "hydrodatasource/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.uv.sources]
aqua-fetch = { git = "https://github.com/iHeadWater/AquaFetch.git", rev = "dev" }
# ============================================================================
# 本地开发模式配置
# ============================================================================
# 说明：
# 1. 本配置仅在本地开发时生效，使用 uv 时会优先使用本地可编辑版本
# 2. 当项目发布到 PyPI 后，其他用户安装时会忽略此配置，自动从 PyPI 安装
# 3. 如需临时使用 PyPI 版本进行测试，可以注释掉对应的本地路径配置
# ============================================================================
hydrodataset = { path = "../hydrodataset", editable = true }
hydroutils = { path = "../hydroutils", editable = true }